--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="app_name" translatable="false">successApp</string>
+	<string name="default_notification_channel_id" translatable="false">first</string>
 
 </resources>
